--- a/jabref.bib
+++ b/jabref.bib
@@ -2695,8 +2695,9 @@
 
 @ARTICLE{eden,
   author = {Rita Loogen and Yolanda {Ortega-Mall\'{e}n} and Ricardo {Pe\~{n}a-Mar\'{\i}}},
-  title = {{Parallel Functional Programming in Eden}},
-  journal = {{Journal of Functional Programming}},
+  title = {Parallel Functional Programming in {Eden}},
+  journal = {Journal of Functional Programming},
+  shortjournal = {J. Functional Programming},
   year = {2005},
   volume = {15},
   pages = {431-475},
@@ -8391,8 +8392,8 @@ year = {2000}
 }
 @inproceedings{Hofer:2008:PED:1449913.1449935,
  author = {Hofer, Christian and Ostermann, Klaus and Rendel, Tillmann and Moors, Adriaan},
- title = {Polymorphic embedding of dsls},
- booktitle = {Proceedings of the 7\xth international conference on Generative programming and component engineering},
+ title = {Polymorphic embedding of {DSLs}},
+ booktitle = {Proceedings of the 7\xth International Conference on Generative Programming and Component Engineering},
  series = {GPCE '08},
  year = {2008},
  isbn = {978-1-60558-267-2},
