--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -506,3 +506,23 @@
  OPTaddress = {New York, NY, USA},
  keywords = {CMP, OS, QoS, SLAs, cache, fairness, interface, quotas},
 } 
+
+@article{Laufer:1994:PTI:186025.186031,
+ author = {L\"{a}ufer, Konstantin and Odersky, Martin},
+ title = {Polymorphic type inference and abstract data types},
+ journal = {ACM Trans. Program. Lang. Syst.},
+ issue_date = {Sept. 1994},
+ volume = {16},
+ number = {5},
+ month = sep,
+ year = {1994},
+ issn = {0164-0925},
+ pages = {1411--1430},
+ numpages = {20},
+ OPTurl = {http://doi.acm.org/10.1145/186025.186031},
+ doi = {10.1145/186025.186031},
+ acmid = {186031},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {dynamic dispatching, existentially quantified types, first-class abstract types, polymorphism, type inference, universally quantified types},
+} 
