--- a/soosim.tex
+++ b/soosim.tex
@@ -334,9 +334,10 @@ breaklines=true,basicstyle=\sffamily];#1;}
 \begin{abstract}
 This paper presents our experience from implementing \soosim --- an operating system simulator, written in Haskell. 
 We briefly discuss the goals and purposed usage of our simulator. 
-We show the reasons to choose Haskell and examine in detail the language features, extensions, programming patterns and techniques, used to implement \soosim. 
+We examine in detail the language features, extensions, programming patterns and techniques, used to implement \soosim. 
 These include coroutines, type classes, monads, techniques for embedded domain-specific languages, and dynamic types. 
-We explore the reasons for using both natural Haskell's static typing with ad-hoc polymorphism and dynamic types in our project.
+Coroutines were especially useful to implement synchronous communication model.
+With the parameterised monads we were able to eliminate dynamic types from our code.
 \end{abstract}
 
 \category{D.3.3}{Programming Languages}{Language Constructs and Features}
