--- a/haskell2012.bib
+++ b/haskell2012.bib
@@ -526,3 +526,60 @@
  OPTaddress = {New York, NY, USA},
  keywords = {dynamic dispatching, existentially quantified types, first-class abstract types, polymorphism, type inference, universally quantified types},
 } 
+
+@inproceedings{hughes1999restricted,
+  title={Restricted data types in {Haskell}},
+  author={Hughes, J.},
+  booktitle={Haskell Workshop},
+  year={1999}
+}
+
+@article{Wadler:2003:MEM:601775.601776,
+ author = {Wadler, Philip and Thiemann, Peter},
+ title = {The marriage of effects and monads},
+ journal = {ACM Trans. Comput. Logic},
+ issue_date = {January 2003},
+ volume = {4},
+ number = {1},
+ month = jan,
+ year = {2003},
+ issn = {1529-3785},
+ pages = {1--32},
+ numpages = {32},
+ OPTurl = {http://doi.acm.org/10.1145/601775.601776},
+ doi = {10.1145/601775.601776},
+ acmid = {601776},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+ keywords = {Monad, effect, region, type, type reconstruction},
+} 
+
+@Misc{monad-parametrisable,
+  OPTkey = 	 {},
+  author =	 {Edward Kmett and Dominique Devriese},
+  title =	 {The \textsf{monad-param} package},
+  howpublished = {Hackage},
+  OPTmonth = 	 {},
+  year =	 {2012},
+  note =	 {\url{http://hackage.haskell.org/package/monad-param}. Retrieved 30.5.2012},
+  OPTannote = 	 {Implements parameterized monads by overloading the monad sugar with more liberal types.}
+}
+
+@article{Ganz:1999:TS:317765.317779,
+ author = {Ganz, Steven E. and Friedman, Daniel P. and Wand, Mitchell},
+ title = {Trampolined style},
+ journal = {SIGPLAN Notices},
+ issue_date = {Sept. 1999},
+ volume = {34},
+ number = {9},
+ month = sep,
+ year = {1999},
+ issn = {0362-1340},
+ pages = {18--27},
+ numpages = {10},
+ OPTurl = {http://doi.acm.org/10.1145/317765.317779},
+ doi = {10.1145/317765.317779},
+ acmid = {317779},
+ publisher = {ACM},
+ OPTaddress = {New York, NY, USA},
+} 
