--- a/soosim.tex
+++ b/soosim.tex
@@ -304,7 +304,7 @@ breaklines=true,basicstyle=\sffamily];#1;}
 
 
 \newcommand{\soosim}{SoOSiM\xspace}
-
+\newcommand{\bind}{\textsf{$\gg$=}\xspace}
 
 \begin{document}
 
