--- a/soosim.tex
+++ b/soosim.tex
@@ -300,6 +300,7 @@ breaklines=true,basicstyle=\sffamily];#1;}
 \newcommand{\olcomment}[1]{\comm{OL}{#1}}
 \newcommand{\cbcomment}[1]{\comm{CB}{#1}}
 \newcommand{\jkcomment}[1]{\comm{JK}{#1}}
+\newcommand{\jlcomment}[1]{\comm{JL}{#1}}
 \newcommand{\glcomment}[1]{\comm{GL}{#1}}
 
 
