--- a/content.tex
+++ b/content.tex
@@ -7,7 +7,7 @@ OS and application software.
 
 The key point is: it is not desirable to keep the whole, monolithic, OS kernel on each core of a multicore machine.
 Doing so has detrimental effects on the caches of the individual cores \olcomment{find a better reference!}.
-Moving to larger distributed systems, monolithic kernels hinder scalability as the entire internal state has to be synchronised amongst the copies.
+Moving to larger distributed systems, monolithic kernels hinder scalability as the entire internal state has to be synchronised amongst the copies.\jlcomment{Restate the paragraph after finding the reference!}
 % \cbcomment{I don't think we should say more about S(o)OS or its ideas / concepts in the intro.}
 % For example, we could dedicate some cores to an application and some cores to an OS.
 % One possible approach to this is the partitioning of the address space. \olcomment{is this so?}
@@ -21,8 +21,6 @@ This execution environment thus differs from contemporary operating systems wher
 
 While creating new operating system concepts and regarding their interaction with the programmability of large-scale systems, we found that existing simulation packages do not seem to have the right abstractions for fast design exploration \cite{cotson,omnet}.
 The ability to simulate separate components of the OS and of the application was the main goal to develop the OS simulator \soosim \cite{Baaij:2012}.
-It is also available from Hackage.\footnote{Issue \cd{cabal install SoOSiM} to install \soosim. See also:
-\url{http://github.com/christiaanb/SoOSiM}.}
 The design decisions were:
 \begin{itemize}
 \item To simulate message passing and shared memories as the main forms of communication between software components.
@@ -37,11 +35,13 @@ The contributions of this paper include:
 \begin{itemize}
 \item A short overview of the \soosim project.
 \item The description of the embedded domain-specific language (eDSL) used to implement OS components in \soosim.
-\item The description of \emph{a} eDSL to describe applications that will run on within a \soosim \emph{simulated} system.
+\item The description of \emph{a} eDSL to describe applications that will run on a \soosim \emph{simulated} system.
 \item The list of Haskell language features, we found particularly useful in this project.
 \item \olcomment{in case of success: The way to model "suspending
     computation" with heterogeneous data without using dynamic types.}
 \end{itemize}
+\soosim is also available from Hackage.\footnote{Issue \cd{cabal install SoOSiM} to install \soosim. See also:
+\url{http://github.com/christiaanb/SoOSiM}.}
 
 The remaining part of this paper is organised as follows.
 % Section~\ref{sec:soos-project} gives an overview of the SoOS project and of the role \soosim plays in the project.
@@ -68,7 +68,7 @@ In \soosim, the hardware platform is described as a set of nodes.
 Each \emph{node} represents a physical computing object: such as a core, complete CPU, memory controller, etc.
 Every node has a local memory of potentially infinite size.
 The layout and connectivity properties of the nodes are not part of the system description.
-If such a level of detail is required, it would have to be modelled explicitly by the user.
+If such a level of detail is required, it would have to be modelled explicitly by the user. \jlcomment{How?} \olcomment{Is it possible to model these within \soosim, using various DSL implementations? If yes, say "In our design, embedded DSLs facilitate such definitions. See Section ... for details."}
 
 Each \emph{node} hosts a set of components.
 A \emph{component} represents an executable object: such as a thread, application, OS module, etc.
@@ -217,7 +217,7 @@ We return to the subject of the coroutine monad transformer in Section~\ref{sec:
 \section{A Domain-Specific Language for \soosim}
 \label{sec:dsl}
 One of the purposes of \soosim is to observe the interaction between application and OS.
-We however do not want to \emph{pollute} our application descriptions with with calls to the simulator functions.
+We however do not want to \emph{pollute} our application descriptions with calls to the simulator functions.
 Nor do we want to be forced to describe our application in a monadic style.
 Additionally, we want to be in control which interactions between OS and application are exactly simulated, without having to change either the descriptions of the OS modules or the application when we want to observe different aspects.
 
@@ -372,7 +372,7 @@ The need in such a behaviour arises naturally with the blocking message passing 
 We utilise \textsf{Control.Monad.Coroutine} \cite{cmt} to express coroutines.
 
 \subsection{Dynamic Types}
-We use dynamic types \cite{Abadi:1991:DTS:103135.103138} for as ``the other side'' of the type classes: we need to communicate heterogeneous types over a typed channel, and there is no option to know all the types-to-transmit at the moment of the channel definition.
+We use dynamic types \cite{Abadi:1991:DTS:103135.103138} as ``the other side'' of the type classes: we need to communicate heterogeneous types over a typed channel, and there is no option to know all the types-to-transmit at the moment of the channel definition.
 
 % \cbcomment{The use-case for existentials+type-classes is to get an OO-like way of programming; please correct me if I'm wrong.
 % Just take a look at: http://www.haskell.org/haskellwiki/Existential_type
