minor abstract improvements

--- a/soosim.tex
+++ b/soosim.tex
@@ -336,7 +336,7 @@ breaklines=true,basicstyle=\sffamily];#1;}
 This paper presents our experience from implementing \soosim --- an operating system simulator, written in Haskell. 
 We briefly discuss the goals and purposed usage of our simulator. 
 We examine in detail the language features, extensions, programming patterns and techniques, used to implement \soosim. 
-These include coroutines, type classes, monads, techniques for embedded domain-specific languages, and dynamic types. \olcomment{remove "dynamic types" in case of a success?}
+These include coroutines, type classes, monads, techniques for embedded domain-specific languages, and dynamic types.
 Coroutines were especially useful to implement synchronous communication model.
 With the parameterised monads we were able to eliminate dynamic types from our code.
 \end{abstract}
@@ -346,7 +346,7 @@ With the parameterised monads we were able to eliminate dynamic types from our c
 \terms{Design, Languages}
 
 \keywords
-simulation, type classes, ad-hoc polymorphism, finally tagless embedding, dynamic typing
+simulation, type classes, ad-hoc polymorphism, finally tagless embedding, dynamic typing, monads
 
 \input{content}
 
